# cpp-datarecorder

./: CMakeLists.txt  NEWS.rst  README.rst  lock_version_resolve.json  resolve.json  waf  wscript
.github/workflows/: cpp-internal.yml
src/datarecorder/: data_mismatch.hpp  data_recorder.hpp  datarecorder.hpp  filter_json.hpp  mismatch_info.hpp  to_json_property.hpp
test/: main.cpp
test/recordings/: datarecorder_mismatch_directory_only_created_when_needed.data
test/src/: test_datarecorder.cpp
